# CloneSearch

./: .gitignore  README.md  TermsOfUse.md  pyproject.toml
.github/workflows/: tests.yml
clonesearch/: CloneSearch.py  cli.py  clustering.py  gaussian_outliers.py  get_params.py  load_data.py  outlier_selection.py
clonesearch/plotting/: clusters.py  noise_profile.py  outlier_definition.py
clonesearch/utils/: gaussian_outliers.py  get_params.py  noise_functions.py  normalisation_functions.py
examples/: tutorial.ipynb  tutorial_advanced.ipynb
functions/: CloneSearch.py  gaussian_outliers.py  get_params.py  noise_functions.py  normalisation_functions.py
test_data/input/: metadata.txt
tests/: test_gaussian_functions.py  test_get_params.py  test_noise_functions.py  test_outlier_selection.py  test_transform_and_norm.py
to_figure_out/: test_normalisation.py
